[package]
name = "include_rgba"
version = "0.1.0"
authors = ["Ponas <mykolas.peteraitis@gmail.com>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/PonasKovas/include_rgba"
homepage = "https://github.com/PonasKovas/include_rgba"
description = "A Rust procedural macro for convenient including of images or textures as RGBA pixel arrays"

[dependencies]
syn = "1.0.12"
quote = "1.0.2"
image = "0.23.6"

[lib]
proc-macro = true